# Internship

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  catboost_model.ipynb  hello.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
modules/: final_training.py  with_class_balanced.py
test/: test_endpoints.py
