[project]
name = "internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "jupyter>=1.1.1",
    "mlflow>=2.20.3",
    "numpy>=1.26.4",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
]

